--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,14 +16,11 @@
         android:textSize="40dp"
         android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="CRUD with SQLite Database"
-        android:textColor="#000000"
-        android:textSize="20dp"
-        android:textStyle="bold" />
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="match_parent"
+        android:layout_height="119dp"
+        app:srcCompat="@drawable/education_student_1_copy" />
 
     <Button
         android:layout_width="match_parent"
@@ -57,5 +55,12 @@
         android:layout_height="wrap_content"
         android:onClick="buttonPressed"
         android:tag="apiButton"
-        android:text="Api" />
+        android:text="book api example" />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="buttonPressed"
+        android:tag="exitButton"
+        android:text="close" />
 </android.widget.LinearLayout>
